# elvis

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py  test_all_scenarios.py
data/config_builder/: kundenparkplatz.yaml  residential.yaml  tankstelle_city.yaml  wohnblock.yaml
elvis/: __init__.py  _config_legacy.py  battery.py  charging_event.py  charging_event_generator.py  charging_point.py  charging_station.py  config.py  distribution.py  enums.py  exceptions.py  infrastructure_node.py  result.py  set_up_infrastructure.py  simulate.py  types.py  units.py  vehicle.py  waiting_queue.py
elvis/config/: __init__.py  infrastructure.py  scenario.py  scheduling.py  time.py  validation.py  vehicles.py
elvis/sched/: __init__.py  schedulers.py
elvis/utility/: elvis_general.py  walker.py
examples/: BatchExample.ipynb  MiniExample.ipynb  Testing.ipynb  batch_simulation.ipynb  create_charging_events.ipynb  getting_started.ipynb  office_load_profile.txt  transform_data.ipynb
examples/results/: infrastructure_optimization_20250927_112902.csv  policy_analysis_20250927_112902.csv  scenario_comparison_20250927_112902.csv
tests/: __init__.py  conftest.py  conftest_enhanced.py  distributions.py
tests/fixtures/: mock_data.py  sample_configs.py
tests/integration/: test_basic_simulation.py  test_case_cabstand.py  test_case_customer_parking_day.py  test_case_customer_parking_night.py  test_case_gasstation_speedway.py  test_case_kundenparkplatz.py  test_case_office.py  test_case_office_fleet.py  test_case_pnr.py  test_case_residential.py  test_case_roadside.py  test_case_tankstelle_city.py  test_case_wohnblock.py
tests/performance/: test_basic_performance.py  test_performance_regression.py
tests/unit/: test_basic_functionality.py  test_battery.py  test_distribution.py  test_property_based.py  test_simulate.py  test_units.py  test_validation.py  test_vehicle.py
tests/unit/config/: __init__.py
